# lidarcamera_projector_node

./: .gitignore  README.md  generate_pcd_from_rosbags.py  occupational_grid_map.py  projector.py  stereodepth.py  utils.py  viewPcdO3d.py  visualize_pcd.py
config/: camera_intrinsics.json  category_colors.json  pcd_config.yaml
multimodal_ws/src/camera_lidar_fusion_pkg/: CMakeLists.txt  package.xml
multimodal_ws/src/camera_lidar_fusion_pkg/config/: kitti.yaml
multimodal_ws/src/camera_lidar_fusion_pkg/launch/: projector.launch
multimodal_ws/src/camera_lidar_fusion_pkg/scripts/: projector.py
python_pcd/config/: pcd_config.yaml
python_pcd/scripts/: animateBuildingMapPCD.py  buildMapPCD.py  viewMultiPCD.py  viewSinglePCD.py
ros_ws_template/: README.md
ros_ws_template/src/example_pkg/: CMakeLists.txt  package.xml
ros_ws_template/src/example_pkg/config/: project_config.yaml
ros_ws_template/src/example_pkg/launch/: cv_basics_py.launch
ros_ws_template/src/example_pkg/scripts/: webcam_pub.py  webcam_sub.py
segformer-best_6classes_aug_adjustable_lr_customweights/: config.json
