<package format="2">
  <name>camera_lidar_fusion_pkg</name>
  <version>0.0.1</version>
  <description>Package for KITTI LIDAR CAMERA FUSION</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
</package>

