<package format="2">
  <name>example_pkg</name>
  <version>0.0.1</version>
  <description>A simple template package to test OpenCV integration with ROS</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
</package>

